[project]
name = "live-course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "openai>=2.35.1",
    "pinecone-client>=6.0.0",
    "pydantic>=2.13.4",
    "youtube-search>=2.2.0",
    "youtube-search-python>=1.6.6",
]
